@@ -4,5 +4,9 @@
 	"description": "Generates a tier list for each recipe",
 	"version": "0.1.2",
 	"author": "PennyJim",
-	"factorio_version": "1.1"
+	"factorio_version": "1.1",
+	"dependencies": [
+		"base >= 1.1.107",
+		"(?) MoreSciencePacks-for1_1 >= 0.1.31"
+	]
 }
